Fixed spacing between client logos.

--- a/app/stylesheets/_shared.sass
+++ b/app/stylesheets/_shared.sass
@@ -276,7 +276,7 @@ section#the_finch
     div.inner_body
       div#the_clients
         div.row
-          width: 900px
+          width: 940px
           height: 82px
           margin: 0px auto
           
@@ -295,6 +295,12 @@ section#the_finch
             
             img:last-child
               margin-left: 15px
+              
+          a:first-child
+            margin-right: 20px
+            
+          a:last-child
+            margin-right: 20px
             
         div.row:first-child
           margin-bottom: 14px
